# browther-desktop-public

./: BUILD.gn  README.md  package-lock.json  package.json  snapcraft.yaml
.github/workflows/: build-android.yml  pr-review-claude.py  pr-review-claude.yml  sync-and-rebase-pr-from-fork.yml
android/: BUILD.gn  brave_java_sources.gni
android/java/: apk_for_test.flags
app/: BUILD.gn  actor_strings.grdp  brave_generated_resources.grd  brave_origin_strings.grd  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  feature_defaults_unittest.cc  generated_resources.grd  generated_resources_override.grd  glic_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp
app/vector_icons/: BUILD.gn
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client.h  brave_profile_prefs.cc  sources.gni
browser/ai_chat/: BUILD.gn  ai_chat_conversation_task_browsertest.cc  code_execution_tool_browsertest.cc  pdf_text_extractor.cc  pdf_text_extractor.h  pdf_text_extractor_unittest.cc
browser/android/: BUILD.gn
browser/brave_shields/: BUILD.gn
browser/brave_wallet/: asset_ratio_service_factory.cc  asset_ratio_service_factory.h  brave_wallet_context_utils.cc  brave_wallet_context_utils.h  brave_wallet_ipfs_service_factory.cc  (+8 more)
browser/password_manager/android/: BUILD.gn  java_sources.gni
browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/: ExportFlow.java  PasswordEntryPreference.java  PasswordSettings.java
components/: autofill_payments_strings.grdp  autofill_strings.grdp  policy_strings.grdp
extensions/: BUILD.gn
patches/: base-BUILD.gn.patch  base-metrics-histogram_functions.h.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-feed-core-java-src-org-chromium-chrome-browser-feed-FeedSurfaceMediator.java.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-appmenu-AppMenuPropertiesDelegateImpl.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPage.java.patch  chrome-android-java-src-org-chromium-chrome-browser-privacy-settings-PrivacySettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-settings-search-SearchIndexProviderRegistry.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-app_controller_mac.mm.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-content_settings-BUILD.gn.patch  chrome-browser-external_protocol-external_protocol_handler.cc.patch  chrome-browser-hub-internal-BUILD.gn.patch  chrome-browser-net-system_network_context_manager.cc.patch  chrome-browser-password_manager-android-BUILD.gn.patch  chrome-browser-prefs-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile_attributes_entry.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-resources-settings-site_settings-site_settings_browser_proxy.ts.patch  chrome-browser-shell_integration_linux.cc.patch  chrome-browser-signin-chrome_signin_helper.cc.patch  chrome-browser-signin-signin_promo_util.cc.patch  chrome-browser-sync-chrome_sync_controller_builder.cc.patch  chrome-browser-sync-sync_service_factory.cc.patch  chrome-browser-sync-sync_service_factory_unittest.cc.patch  chrome-browser-sync-test-integration-sync_test.cc.patch  (+96 more)
test/: BUILD.gn
(+274 files in other folders)
