# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_browser_password_manager_backend_java_sources = [
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/BravePasswordManagerHelper.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordAccessReauthenticationHelper.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordListObserver.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordManagerHandler.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordManagerHandlerProvider.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordReauthenticationFragment.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordUiView.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ReauthenticationManager.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/SavedPasswordEntry.java",
]

brave_browser_password_manager_util_java_sources = [
  "//brave/android/java/org/chromium/chrome/browser/android/util/CallbackDelayer.java",
  "//brave/android/java/org/chromium/chrome/browser/android/util/DialogManager.java",
  "//brave/android/java/org/chromium/chrome/browser/android/util/NonCancelableProgressBar.java",
  "//brave/android/java/org/chromium/chrome/browser/android/util/SingleThreadBarrierClosure.java",
  "//brave/android/java/org/chromium/chrome/browser/android/util/TimedCallbackDelayer.java",
]

brave_browser_password_manager_ui_java_sources = [
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/BravePasswordsPreference.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ExportErrorDialogFragment.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ExportFlow.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ExportFlowInterface.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ImportFlow.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordEntryPreference.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordSettings.java",
  "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/ProgressBarDialogFragment.java",
]

brave_browser_password_manager_java_sources =
    brave_browser_password_manager_backend_java_sources +
    brave_browser_password_manager_util_java_sources +
    brave_browser_password_manager_ui_java_sources

brave_browser_password_manager_deps = [
  "//brave/build/android:android_brave_strings_grd",
  "//chrome/android:chrome_app_java_resources",
  "//chrome/browser/ui/android/favicon:java",
  "//components/browser_ui/settings/android:java",
  "//third_party/androidx:androidx_recyclerview_recyclerview_java",
]

brave_browser_password_manager_jni_headers = [ "//brave/browser/password_manager/android/java/src/org/chromium/chrome/browser/password_manager/settings/PasswordUiView.java" ]
